--- a/index/css/index.css
+++ b/index/css/index.css
@@ -17,6 +17,7 @@
 body {
     font-family: var(--font-family);
     overflow-x: hidden;
+    background-color: var(--color-primary);
 }
 
 .visually-hidden {
@@ -41,9 +42,7 @@ body {
     gap: 64px;
 }
 
-.index-header {
-    text-align: center;
-}
+.index-header { text-align: center; }
 
 .index-title {
     max-width: 766px;
@@ -79,9 +78,7 @@ body {
     transform: rotate(-11.32deg);
 }
 
-.card-word:hover {
-    transform: rotate(-11.32deg) scale(1.08);   
-}
+.card-word:hover { transform: rotate(-11.32deg) scale(1.08); }
 
 /* 문법 카드 */
 .card-grammar {
@@ -90,9 +87,7 @@ body {
 }
 
 .card-grammar:hover,
-.card-grammar:focus {
-    transform: rotate(15.83deg) scale(1.08);
-}
+.card-grammar:focus { transform: rotate(15.83deg) scale(1.08); }
 
 /* 카드 텍스트(단어, 문법) */
 .card-text {
@@ -102,11 +97,94 @@ body {
 }
 
 /* 단어 카드 텍스트 색상 */
-.card-word .card-text {
-    color: var(--color-text-dark);
-}
+.card-word .card-text { color: var(--color-text-dark);}
 
 /* 문법 카드 텍스트 색상 */
-.card-grammar .card-text {
-    color: var(--color-text-light);
+.card-grammar .card-text { color: var(--color-text-light);}
+
+footer {
+    padding: 20px;
+    text-align: center;
+    width: auto;
+}
+
+.bottom-menu {
+    display: flex;
+    gap: 20px;
+    justify-content: flex-start;
+    align-items: stretch;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    padding: 12px;
+    min-width: 260px;
+    max-width: 100%;
+    font-family: Arial, sans-serif;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    cursor: pointer;
+    background-color: #ffffff;
+}
+
+.project-card ul {
+    margin: 0;          
+    padding-left: 20px; 
+}
+
+.project-card a {
+    text-decoration: none;
+    background-color: #ffffff;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.project-card img {
+    position: absolute; 
+    top: 50%;    
+    right: 20px;   
+    transform: translateY(-50%); 
+    width: 65px;
+    height: 65px;
+}
+
+.skill-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    padding: 12px;
+    min-width: 270px;
+    max-width: 100%;
+    font-family: Arial, sans-serif;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+
+.skill-card h3 { margin: 0 0 15px 0;}
+
+.skill-img {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.skill-img li {
+    display: flex;
+    align-items: center;
+}
+
+.skill-img img {
+    width: 50px;
+    height: 50px;
 }
