영어 단어 레벨 페이지 css

--- a/communal/css/word-lv-page.css
+++ b/communal/css/word-lv-page.css
@@ -19,6 +19,7 @@
 body {
     font-family: var(--font-family);
     background-color: var(--color-background);
+    margin-bottom: 200px;
 }
 
 .wrod-page {
